src/index.css
@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Nunito:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');

@tailwind base;
@tailwind components;
@tailwind utilities;

*,
*::after,
*::before {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
}

body {
  font-size: 16px;
  font-family: 'Nunito', 'Inter', sans-serif;
}

@layer components {
  ._full {
    @apply px-4 md:px-6 w-full;
  }
  .modal {
    background-color: rgba(0, 0, 0, 0.5);
    @apply z-10 h-screen w-full top-0 left-0 absolute;

    @media (min-width: 768px) {
      background-color: transparent !important;
    }
  }

  .animate-out,
  .animate-in {
    @apply -left-full md:left-0 bg-transparent;
    transition-property: left background-color;
    transition-duration: 0.25s;
    transition-timing-function: ease-in;
  }

  .animate-in {
    @apply left-0;
    background-color: rgba(0, 0, 0, 0.5);
    animation-direction: reverse;
  }

  @keyframes dropdown {
    0% {
      visibility: visible;
      display: block;
      max-height: 0px;
    }
    100% {
      max-height: 300px;
    }
  }

  @keyframes close-dropdown {
    0% {
      max-height: 300px;
    }

    80% {
      max-height: 1px;
      opacity: 1;
    }
    85% {
      opacity: 0;
    }

    100% {
      max-height: 0px;
      visibility: hidden;
    }
  }

  .dropdown {
    animation-duration: 0.25s;
    animation-fill-mode: forwards;
  }
}

.nav-item.active {
  @apply before:absolute before:block before:content-[''] before:bg-brown.dark before:w-[10px] before:left-0 before:h-full before:rounded-tr-xl before:rounded-br-xl;
}

.horizontal-nav.active {
  @apply rounded-t-md bg-brown.dark text-white;
}
._media-options-btn span {
  display: none;
}
._media-options-btn:hover span {
  display: block;
}

table[role='grid'] {
  border-radius: 1rem;
  overflow: hidden;
}

.fc-toolbar-chunk .fc-toolbar-title {
  color: #4b5563;
  font-size: 1.2rem;
  font-weight: 600;
}

.fc-toolbar-chunk .fc-button {
  background-color: #432c81;
  box-shadow: none;
  outline: 0;
  border: 0;
}

.fc-toolbar-chunk .fc-button-primary:focus {
  box-shadow: none;
  outline: 0;
  border: 0;
}

tr[role='row'] td,
th[role='columnheader'] {
  border: 0;
  border-bottom: 1px solid #8080802b;
  padding: 0 0.25rem;
}

tr[role='row']:nth-of-type(2n - 1) {
  background-color: #f3f4f6;
}

thead[role='presentation'] tr[role='row'] {
  background-color: #ccc3ff;
  border-bottom: 1px solid #8080802b;
}

thead[role='presentation'] tr[role='row'] .fc-col-header-cell {
  padding: 1rem 0;
}

.fc-daygrid-day-top {
  justify-content: center;
}

